# ChangeLog for app-admin/gpass
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  31 Mar 2011; Justin Lecher <jlec@gentoo.org> gpass-0.5.1.ebuild,
  +metadata.xml:
  Added metadata.xml
