@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  31 Mar 2011; Justin Lecher <jlec@gentoo.org> gpass-0.5.1.ebuild:
+  Fixed up ebuild
+
   31 Mar 2011; Justin Lecher <jlec@gentoo.org> gpass-0.5.1.ebuild,
   +metadata.xml:
   Added metadata.xml
